<resources>
    <string name="app_name">Language Sample</string>
    <string name="welcome">Welcome!</string>
    <string name="email_address">Email Address</string>
    <string name="login">Login</string>
    <string name="don_t_have_account_sign_up">Don\'t have account? Sign Up</string>
    <string name="password">Password</string>
    <string name="button_click">Thank you!</string>
    <string name="flag">Flag</string>
</resources>
